--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 @import url(common.css);
 @import url(header.css);
 @import url(main.css);
-@import url(numbers.css);
+@import url(price.css);
 @import url(solutions.css);
 @import url(process.css);
 @import url(reviews.css);
