--- a/css/common.css
+++ b/css/common.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Satoshi', sans-serif;
 }
 
 /*CSS RESET START*/
@@ -122,6 +122,7 @@ table {
   --main-bg-color: #ffffff;
   --usual-decorations: #2d53f5;
   --main-text-color: #000000;
+  --bgtext: #ffffff;
 }
 /*COLOR VARIABLES END*/
 
@@ -141,6 +142,49 @@ body {
   background: var(--main-bg-color);
 }
 h1 {
+  font-family: 'Clash Display', sans-serif;
+  width: 100%;
+  max-width: 721px;
+  font-size: 80px;
+  font-style: normal;
+  font-weight: 470;
+  color: var(--bgtext);
+}
+h2 {
+  color: var(--main-text-color);
+  text-align: center;
+  font-family: 'Clash Display', sans-serif;
+  font-size: 72px;
+  font-style: normal;
+  font-weight: 470;
+  line-height: 120%;
+}
+.common_button {
+  display: block;
+  background-color: var(--main-bg-color);
+  display: flex;
+  height: 80px;
+  padding: 26px 36px;
+  justify-content: space-between;
+  align-items: center;
+  color: var(--main-text-color);
+  text-align: center;
+  font-family: 'Clash Display', sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  border-radius: 100px;
+  transition: all 0.4s;
+}
+.common_button:hover {
+  background-color: rgb(222, 222, 222);
+  color: #5f5f5f;
+  transition: all 0.4s;
+  text-decoration: none;
+}
+.button_arrow {
+  height: 42px;
+  width: 42px;
 }
 .container {
 }
