--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,6 @@
 header {
-  /* background-color: transparent; */
+  background-color: rgba(255, 255, 255, 0.4);
+  backdrop-filter: blur(10px);
   width: 100%;
   height: 100px;
   position: fixed;
@@ -8,8 +9,6 @@ header {
   transition: all 0.5s;
 }
 .active {
-  background-color: rgba(34, 34, 34, 0.5);
-  backdrop-filter: blur(10px);
   transition: all 0.5s;
 }
 .header_wrapper {
@@ -18,7 +17,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 24px 150px 16px 150px;
+  padding: 0 150px;
   margin: 0 auto;
 }
 
@@ -32,9 +31,18 @@ header {
   width: 100%;
   padding: 0;
 }
-.arrow_icon {
-  height: 24px;
-  width: 24px;
+.logo_wrapper {
+  color: var(--usual-decorations);
+  text-decoration: none;
+  font-family: 'Playfair Display', serif;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 120%;
+}
+.logo_wrapper:hover {
+  text-decoration: none;
+  color: var(--usual-decorations);
 }
 .stick {
   display: block;
@@ -44,24 +52,7 @@ header {
   background-color: white;
   transition: 0.2s;
 }
-.logo_wrapper {
-  cursor: pointer;
-  z-index: 100;
-}
-.main-logo {
-  height: 60px;
-}
-.logo-color {
-  width: 100%;
-  max-height: 60px;
-  z-index: 100;
-  /* animation-duration: 0.5s;
-  animation-name: fadelogoin;
-  animation-timing-function: linear; */
-}
-.logo-hide {
-  display: none;
-}
+
 .burger {
   display: none;
 }
@@ -75,54 +66,62 @@ header {
 }
 .navbar_menu {
   display: flex;
-  gap: 24px;
+  gap: 58px;
   height: 100%;
   align-items: center;
   margin-left: 31px;
 }
 .nav_elem {
   position: relative;
-  text-decoration: none;
-  font-size: 14px;
   color: var(--main-text-color);
-  letter-spacing: 0.2px;
-  border-radius: 15px;
-  transition: 0.5s;
-  cursor: pointer;
+  text-align: center;
+  font-family: 'Satoshi';
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 130%;
 }
 .nav_elem:hover {
-  color: #cacaca;
-  transition: 0.5s;
+  color: #404040;
+  transition: 0.3s;
+  cursor: pointer;
+  text-decoration: none;
 }
 .nav_elem:after {
   content: '';
   position: absolute;
   right: 0;
+  left: 0;
+  margin: 0 auto;
   width: 0;
   height: 1.5px;
   display: block;
-  background-color: #ff8902;
-  transition: 0.5s;
-  margin-top: 10px;
+  background-color: var(--usual-decorations);
+  transition: 0.3s;
 }
 
 .nav_elem:hover::after {
   left: 0;
-  right: auto;
+  right: 0;
+  margin: 0 auto;
+
   width: 100%;
 }
 
 @media (max-width: 1620px) {
   .header_wrapper {
-    padding: 24px 100px 16px 100px;
+    padding: 0px 80px 0px 80px;
   }
 }
-@media (max-width: 1200px) {
+@media (max-width: 1430px) {
   .header_wrapper {
-    padding: 24px 20px 16px 20px;
+    padding: 0 20px 0 20px;
+  }
+  .navbar_menu {
+    gap: 25px;
   }
 }
-@media (max-width: 1050px) {
+@media (max-width: 1130px) {
   .navbar {
     padding: 0;
   }
@@ -152,7 +151,7 @@ header {
   }
 
   .logo_wrapper {
-    padding: 10px 0px;
+    font-size: 24px;
   }
 
   .popup {
@@ -165,25 +164,25 @@ header {
     overflow: hidden;
     top: 0;
     justify-content: flex-end;
-    background-color: rgba(17, 17, 17, 1);
+    background-color: rgb(255, 255, 255);
   }
 
   .popup.open {
     position: fixed;
     left: 0;
     display: flex;
-    animation-duration: 0.5s;
+    animation-duration: 0.3s;
     animation-name: fadein;
     animation-timing-function: linear;
   }
 
   @keyframes fadein {
     from {
-      background-color: rgba(0, 0, 0, 0);
+      background-color: rgba(255, 255, 255, 0);
     }
 
     to {
-      background-color: rgbargba(17, 17, 17, 1);
+      background-color: rgba(255, 255, 255, 1);
     }
   }
 
@@ -230,7 +229,7 @@ header {
     position: relative;
     display: flex;
     left: 0;
-    animation-duration: 0.5s;
+    animation-duration: 0.4s;
     animation-name: slidein;
     animation-timing-function: linear;
   }
@@ -265,11 +264,11 @@ header {
 
   @keyframes fadeout {
     from {
-      background-color: rgba(17, 17, 17, 1);
+      background-color: rgba(255, 255, 255, 1);
     }
 
     to {
-      background-color: rgba(0, 0, 0, 0);
+      background-color: rgba(255, 255, 255, 0);
     }
   }
 
@@ -285,7 +284,7 @@ header {
 }
 
 .popup.close {
-  background-color: rgba(0, 0, 0, 0);
+  background-color: rgba(255, 255, 255, 0);
   animation-name: fadeout;
   animation-duration: 0.3s;
   animation-timing-function: linear;
@@ -308,28 +307,4 @@ header {
 
 .burger_space.active .stick:nth-child(3) {
   transform: translateY(-5.66px) rotate(-45deg);
-}
-@media (max-width: 600px) {
-  .main_button {
-    display: none;
-  }
-  .main-logo {
-    height: 40px;
-    width: 161px;
-    transition: all 2s;
-  }
-  .logo-color {
-    width: 162px;
-    transition: all 2s;
-  }
-  header {
-    height: 64px;
-  }
-  .mob_button {
-    display: flex;
-  }
-  .fly_space {
-    top: 64px;
-    height: calc(100svh - 124px);
-  }
 }
