--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
 @import url(header.css);
 @import url(main.css);
 @import url(price.css);
-@import url(solutions.css);
+@import url(featured.css);
 @import url(process.css);
 @import url(reviews.css);
 @import url(ready.css);
