--- a/css/header.css
+++ b/css/header.css
@@ -80,6 +80,7 @@ header {
   font-style: normal;
   font-weight: 500;
   line-height: 130%;
+  text-decoration: none;
 }
 .nav_elem:hover {
   color: #404040;
