--- a/css/index.css
+++ b/css/index.css
@@ -3,9 +3,8 @@
 @import url(main.css);
 @import url(price.css);
 @import url(featured.css);
-@import url(process.css);
+@import url(begin.css);
 @import url(reviews.css);
-@import url(ready.css);
-@import url(team.css);
 @import url(sub.css);
+@import url(faq.css);
 @import url(footer.css);
