--- a/css/common.css
+++ b/css/common.css
@@ -175,6 +175,7 @@ h2 {
   font-weight: 500;
   border-radius: 100px;
   transition: all 0.4s;
+  text-decoration: none;
 }
 .common_button:hover {
   background-color: rgb(222, 222, 222);
