--- a/css/common.css
+++ b/css/common.css
@@ -182,6 +182,7 @@ h2 {
   color: #5f5f5f;
   transition: all 0.4s;
   text-decoration: none;
+  cursor: pointer;
 }
 .button_arrow {
   height: 42px;
