--- a/css/sub.css
+++ b/css/sub.css
@@ -152,7 +152,7 @@ input[type='email']:valid ~ label {
   opacity: 0.5;
 }
 
-.form_button {
+input[type='submit'] {
   display: flex;
   width: 382px;
   height: 80px;
@@ -164,9 +164,7 @@ input[type='email']:valid ~ label {
   text-align: center;
   font-family: 'Clash Display', sans-serif;
   font-size: 20px;
-  font-style: normal;
   font-weight: 500;
-  line-height: normal;
   transition: all 0.4s;
   outline: 0;
   border: 0;
@@ -196,7 +194,7 @@ input[type='submit']:hover {
   .sub_form_title {
     font-size: 35px;
   }
-  .form_button {
+  input[type='submit'] {
     width: 200px;
     margin: 0 auto;
     height: 48px;
