--- a/css/sub.css
+++ b/css/sub.css
@@ -159,6 +159,7 @@ input[type='submit'] {
   padding: 26px 36px;
   justify-content: center;
   align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
   border-radius: 100px;
   background-color: var(--bgtext);
   text-align: center;
