--- a/css/sub.css
+++ b/css/sub.css
@@ -159,11 +159,11 @@ input[type='submit'] {
   padding: 26px 36px;
   justify-content: center;
   align-items: center;
-  font-family: Arial, Helvetica, sans-serif;
   border-radius: 100px;
   background-color: var(--bgtext);
   text-align: center;
-
+  font-family: 'Clash Display', sans-serif;
+  color: black;
   font-size: 20px;
   font-weight: 500;
   transition: all 0.4s;
@@ -173,6 +173,7 @@ input[type='submit'] {
 input[type='submit']:hover {
   cursor: pointer;
   transition: all 0.4s;
+  color: rgb(49, 49, 49);
   background-color: rgba(255, 255, 255, 0.804);
 }
 .sub_mob {
