--- a/css/thankyou.css
+++ b/css/thankyou.css
@@ -1,17 +1,32 @@
+.main {
+  height: calc(100vh - 64px);
+  position: absolute;
+  top: 0;
+}
 .info {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 40px;
+  height: 100%;
+  gap: 30px;
+  padding-bottom: 130px;
 }
 .thankyou_main {
   font-size: 30px;
   color: black;
   margin: 0 auto;
   text-align: center;
-  margin-top: 300px;
 }
 .back_to_main {
   font-size: 20px;
+  padding: 20px;
+  border-radius: 20px;
+  background-color: #2d53f5;
+  color: white;
+  text-decoration: none;
+}
+.bold_text {
+  font-weight: 700;
+  font-size: 30px;
 }
